[package]
name = "swift-runtime-sys"
description = "Rust bindings generated for the Swift Runtime"
version = "0.0.1"
edition = "2021"
license = "Apache 2.0"
repository = "https://github.com/eugenehp/swift-runtime-sys"
keywords = ["swift", "runtime", "sys", "bindings"]
readme = "README.md"
exclude = ["swift"]

[dependencies]

# [build-dependencies]
# bindgen = "0.69.4"

[build-dependencies]
bindgen = { package="bindgen", git = "https://github.com/eugenehp/rust-bindgen.git", branch = "swift", version = "0.69.4" }
